add convex package

--- a/apps/widget/tsconfig.json
+++ b/apps/widget/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@workspace/backend/*": ["../../packages/backend/convex/*" ],
       "@workspace/ui/*": ["../../packages/ui/src/*"]
     },
     "plugins": [
