--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/math": "workspace:*",
+    "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "convex": "^1.29.3",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
