--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -17,6 +17,8 @@
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "^1.29.3",
+    "jotai": "^2.16.1",
+    "jotai-family": "^1.0.1",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
