--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,7 +14,14 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.2.9",
+    "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/xai": "1.2.18",
     "@clerk/backend": "^2.29.2",
-    "convex": "^1.29.3"
+    "@convex-dev/agent": "^0.1.16",
+    "ai": "4.3.19",
+    "convex": "^1.29.3",
+    "convex-helpers": "^0.1.111",
+    "groq-sdk": "^0.37.0"
   }
 }
