--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,9 +45,12 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.69.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
+    "use-stick-to-bottom": "^1.1.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
