--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.1",
+    "@dicebear/collection": "^9.3.1",
+    "@dicebear/core": "^9.3.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
