--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -18,6 +18,7 @@
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "^1.29.3",
+    "date-fns": "^4.1.0",
     "jotai": "^2.16.1",
     "jotai-family": "^1.0.1",
     "lucide-react": "^0.475.0",
