--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,9 +48,11 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "convex": "^1.29.3",
+    "countries-and-timezones": "^3.8.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
@@ -58,7 +60,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.69.0",
-    "react-resizable-panels": "^4.1.0",
+    "react-resizable-panels": "^3.0.3",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
