--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.69.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "3.0.3",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
